# MarioGame

./: .gitignore  CMakeLists.txt  README.md  cocos2d
Classes/: AppDelegate.cpp  AppMacros.h  Item.cpp  Item.h  ItemBoss.cpp  ItemBoss.h  ItemBullet.cpp  ItemBullet.h  ItemFireString.cpp  ItemFlower.cpp  ItemFlyFish.cpp  ItemMushroomMonster.cpp  ItemTortoise.cpp  ItemTortoiseFly.cpp  Mario.cpp  Mario.h  SceneGame.cpp  SceneGame.h  SceneLoadResource.cpp  SceneLoadResource.h  SceneStart.cpp  SceneStart.h  myutil.cpp
cocos2d/cocos/base/: ccUTF8.h
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/MarioGame.dir/Debug/: MarioGame.exe.recipe
proj.win32/Win32/Debug/SYNC_RESOURCE-MarioGame/: SYNC_RESOURCE-MarioGame.recipe
proj.win32/engine/cocos/core/cocos2d.dir/Debug/: cocos2d.lib.recipe
